media/prowlarr/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
spec:
  serviceName: prowlarr
  selector:
    matchLabels:
      app: prowlarr
  replicas: 1
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:1.20.1
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-data
              mountPath: /config
      volumes:
        - name: prowlarr-data
          persistentVolumeClaim:
            claimName: prowlarr-data
