media/prowlarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
  selector:
    app: prowlarr
